# build-systems

./: CMakeLists.txt
A/: preparing.py
B/: CMakeLists.txt  lib.h
C/: main.cpp  main.h
